# gitlab-students-monitor

./: .gitchangelog.rc  Dockerfile  README.md  pyproject.toml
gsm/: __init__.py  cli.py  config.py  models.py  views.py
